Update for 0.11.0