@@ -7,16 +7,10 @@ subprojects {
 
     dependencies {
         // These are the 'production' dependencies of the Demo src/main/java files -> just for Demo purposes, otherwise irrelevant
+	compile 'javax.annotation:javax.annotation-api:1.3.2'
         compile 'org.apache.geronimo.specs:geronimo-ejb_3.1_spec:1.0'
         compile 'org.apache.geronimo.specs:geronimo-jpa_2.0_spec:1.0'
         compile 'joda-time:joda-time:2.0'
     }
-
-    tasks.withType(AbstractCompile) {
-        options.compilerArgs += ["--add-modules", "java.xml.ws.annotation"]
-    }
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.10.2'
-}
